[tool.poetry]
name = "neo4j-transfer-streamlit"
version = "0.1.2"
description = ""
authors = ["jalakoo <jalakoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
neo4j-transfer = {path = "/Users/jasonkoo/neo4j/repos/neo4j-transfer", develop = true}
streamlit = "^1.46.1"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
